--- a/Documentation.tex
+++ b/Documentation.tex
@@ -1,26 +1,29 @@
-\documentclass{report}
+\documentclass[12pt]{report}
 
 %Packages
 %-------------------------------------------------------------------------------
 	\usepackage[T1]{fontenc}
-	\usepackage[a4paper, total={6in, 8in}]{geometry}%Margins
+	\usepackage[a4paper, left=1in, top=0.1in]{geometry}%Margins
 	\usepackage{polski}
 	\usepackage[utf8]{inputenc}
 	\usepackage[polish]{babel}
 	\usepackage{graphicx}
 	\usepackage{fix-cm}
+	\usepackage{amsmath}%Math equations
 	\usepackage{tocloft}%Dots in table of contents
 	\usepackage{indentfirst}%Indent at the begining, after section/subsection
-	\usepackage{fancyhdr}
+	%\usepackage{fancyhdr}%Headers/footers
 %-------------------------------------------------------------------------------
 %end Packages
 
 
 
 %Headers and footers
-\pagestyle{fancy}
-\chead{\Huge{\uppercase{POLITECHNIKA ŚLĄSKA}}}
-\lfoot{Gliwice, rok akadem. 2018/2019}
+%-------------------------------------------------------------------------------
+%\pagestyle{fancy}
+%\chead{\Huge{\uppercase{POLITECHNIKA ŚLĄSKA}}}
+%\lfoot{Gliwice, rok akadem. 2018/2019}
+%-------------------------------------------------------------------------------
 %end Headers and footers
 
 
@@ -34,8 +37,7 @@
 
 %Renew
 %-------------------------------------------------------------------------------
-%Dots in table of contents
-\renewcommand \cftchapdotsep{4.5}
+\renewcommand \cftchapdotsep{4.5}%Dots in table of contents
 %-------------------------------------------------------------------------------
 %end Renew
 
@@ -44,16 +46,19 @@
 \newcommand{\hugeFontSize}{}
 \newcommand{\newLine}{~\\}
 \newcommand{\si}{ś}
+\newcommand{\SI}{Ś}
 %-------------------------------------------------------------------------------
 %end Custom commands
-
 
 \makeatletter
 \begin{document}
 	\begin{titlepage}
-	\thispagestyle{fancy}
+	%\thispagestyle{fancy}
+	\pagenumbering{gobble}
 		\begin{center}
 			\newLine
+
+			\vskip 1.5in
 			\includegraphics[width=0.4\textwidth]{logo}\\ \newLine
 			\huge{Wydział Matematyki Stosowanej} \\ \newLine
 
@@ -66,6 +71,49 @@
 			Opiekun pracy: dr inż. Adam Zielonka \\
 	\end{titlepage}
 	\newpage
+%Oswiadczenia
+\noindent {\Huge {\textbf{O\si wiadczenie kierującego projektem inżynierskim}}} \\ \newLine \\ \newLine
+\normalsize
+\indent  Potwierdzam, że niniejszy projekt został przygotowany pod moim kierunkiem i kwalifikuje się do przedstawienia go w postępowaniu o nadanie tytułu zawodowego: inżynier.\\ \newLine \\ \newLine
+
+Data
+\hfill
+Podpis kierującego projektem\\ \newLine
+
+
+
+
+
+\noindent {\Huge{\textbf{O\si wiadczenie autora}} \\ \newLine \\ \newLine
+\normalsize
+\indent \SI wiadomy odpowiedzialno\si ci karnej o\si wiadczam, że przedkładany projekt inżynierski na temat:
+\@title
+został napisany przez autra samodzielnie.
+
+\noindent Jednocze\si nie o\si wiadczam, że ww. projekt: \\
+
+
+\setlength{\leftskip}{1cm}
+
+\noindent-nie narusza praw autorskich w rozumieniu ustawy z dnia 4 lutego 1994 roku o prawie autorskim i prawach pokrewnych (Dz. U. z 2000 r. Nr 80, poz. 904 z późn. zm.) oraz dóbr osobistych chronionych prawem cywilnym, a także nie zawiera danych i informacji, które uzyskałem w sposób niedozwolony, \\
+
+\noindent-nie była wcze\si niej podstawą żadnej innej urzędowej procedury związanej z nadawaniem dyplomów wyższej uczelni lub tytułów zawodowych,\\ 
+
+\noindent-nie zawiera fragmentów dokumentów kopiowanych z innych źródeł bez wyraźnego zaznaczenia i podania źródła.\\
+
+\setlength{\leftskip}{0pt}
+\noindent Podpis autora projektu:\\ \newLine
+
+\noindent1. Kamil Kryus  \hfill nr albumu: 246591 \hfill $ \underset{podpis}{......................................}$ \\ \newLine \\ \newLine
+
+\hfill Gliwice, dnia ...................
+	\newpage
+%end Oswiadczenia
+
+
+
+	\thispagestyle{plain}
+	\pagenumbering{arabic}
 %Table of Contents
 	\tableofcontents
 %end Table of Contents
@@ -81,13 +129,72 @@
 %Opis algorytmów
 	\chapter{Opis algorytmów}
 		\section{Algorytm symulowanego wyżarzania}
-			\subsection{Opis}
 	Algorytm ten został stworzony wzorując się na zjawisku wyżarzania w metalurgii, które polega na nagrzaniu elementu stalowego do odpowiedniej temperatury, przetrzymaniu go w tej temperaturze przez pewien czas, a następnie powolnym jego schłodzeniu. Sam algorytm natomiast bazuje na metodach Monte-Carlo i w pewnym sensie może być rozważany jako algorytm iteracyjny.\\ \newLine
 Główną istotą i zarazem zaletą tego algorytmu jest wykonywanie pewnych losowych przeskoków do sąsiednich rozwiązań, dzięki czemu jest w stanie uniknąć wpadania w lokalne minimum. Algorytm ten najczę\si ciej jest używany do rozwiązywania problemów kombinatorycznych, jak np. problemu komiwojażera.
 			\subsection{Parametry}
 
-			\subsection{Kroki algorytmu}
+\noindent \underline{Początkowa konfiguracja} \\ \newLine
+\indent W tym kroku powinniśmy zainicjalizować naszą temperaturę wysoką wartością oraz znaleźć początkowe losowe rozwiązanie naszego problemu. 
+\\ \newLine
 
+\noindent \underline{Temperatura} \\ \newLine
+\indent Temperatura jest zarówno czynnikiem iteracyjnym, jak i jest związana z funkcją prawdopodobieństwa zamiany gorszego rozwiązania z lepszym. Zatem zakres temperatury powinien być taki, aby na początku działania naszego algorytmu dawał wysoką możliwość zamian, a wraz z postępem iteracji te prawdopodobieństwo się zmniejszało i pod koniec było bliskie zeru.\\ \newLine
+
+
+\noindent \underline{Końcowa temperatura} \\ \newLine
+\indent Jest to bardzo mała wartość, która sugeruje, iż gdy wartość temperatury spadnie do tego poziomu, zakończył się proces wyżarzania i rozwiązanie zostało znalezione. Wartość ta powinna być na tyle mała, by temperatura będąc niewiele większa prowadziła do bardzo niskiego prawdopodobieństwa, a jednocze\si nie nie wymagało to zbyt dużej ilo\si ci iteracji. \\ \newLine
+
+
+\noindent \underline{Powtarzanie pewną ilość razy dla zadanej temperatury} \\ \newLine
+\indent Wartość ta powinna być z góry ustalona i powinna dać nam możliwość sprawdzenia wielu sąsiadów obecnego rozwiązania, równocześnie nie powodując zbyt dużego obciążenia dla algorytmu.\\ \newLine
+
+
+\noindent \underline{Znajdowanie losowego sąsiada poprzedniego rozwiązania} \\ \newLine
+\indent Funkcja ta powinna nam pozwalać przejrzeć jak najszerszy zakres rozwiązań, a jednocze\si nie pozwolić na przeszukiwanie coraz to bliższych sąsiadów obecnie najlepszego rozwiązania, zatem warto uzależnić tą funkcję od stopnia ukończenia globalnych iteracji.\\ \newLine
+
+
+\noindent \underline{Funkcja kosztu} \\ \newLine
+\indent Poprzez funkcję kosztu rozumiemy różnicę pomiędzy obecnie najlepszym rozwiązaniem, a nowym. W tym wypadku nowe rozwiązanie zawsze jest gorsze (a tym samym przy poszukiwaniu minimum globalnego posiada warto\si ć większą), to w tym wypadku warto\si ć jest ujemna.\\ \newLine
+
+
+\noindent \underline{Prawdopodobieństwo zamiany P} \\ \newLine
+\indent Prawdopodobieństwo jest potrzebne do decyzji czy zamienić nasze nowe i gorsze rozwiązanie z wcze\si niejszym, lepszym. 
+
+Prawdopodobieństwo zależy od różnicy pomiędzy starą wartością, a nową, zwaną tutaj dystansem, oraz obecnej temperatury. Prawdopodobieństwo zatem można przedstawić w następujący sposób:
+\[P = e^\frac{\Delta E}{T} \]
+gdzie:\\
+\begin{flalign}
+& \Delta E - funkcja\ kosztu& 
+\end{flalign}
+T - obecna warto\si ć temperatury\\
+
+Prawdopodobieństwo to wraz ze spadkiem warto\si ci funkcji kosztu maleje (gdyż jest zawsze ujemne), natomiast wyższa warto\si ć temperatury zwiększa prawdopodobieństwo. Decydując o tym czy powinniśmy zamienić nasze gorsze rozwiązanie z lepszym powinniśmy porównać z wartością losową zawierającą się w zakresie [0,1].\\ \newLine
+
+
+\noindent \underline{Zmniejszanie temperatury} \\ \newLine
+\indent Szybkość zmniejszania nie powinna być zbyt duża, aby pozwolić algorytmowi na sprawdzenie jak największego zakresu możliwych rozwiązań, a jednocześnie niezbyt wolna, gdyż może to spowodować zbyt wolny spadek prawdopodobieństwa, a tym samym finalnie pozwolić na pozostanie w gorszym rozwiązaniu. W większości opracowań można spotkać ten proces, jako mnożnik temperatury w zakresie [0.8;0.99].\\ \newLine
+
+
+
+			\subsection{Kroki algorytmu}
+Algorytm ten można również przedstawić za pomocą listy kroków:
+
+\begin{enumerate}
+	\item Zainicjalizuj początkową konfigurację
+	\item Dopóki temperatura > minimum, powtarzaj:
+	\begin{enumerate}
+		\item Powtórz pewną ilość razy dla danej temperatury
+		\begin{enumerate}
+			\item Znajdź losowo sąsiada poprzedniego rozwiązania
+			\item Sprawdź czy rozwiązanie jest lepsze od poprzedniego (funkcja kosztu)
+			\begin{enumerate}
+				\item Jeżeli jest, zamień rozwiązania
+				\item Jeżeli nie jest, zamień rozwiązania z pewnym prawdopodobieństwem P
+			\end{enumerate}
+		\end{enumerate}
+		\item Zmniejsz temperaturę
+	\end{enumerate}
+\end{enumerate}
 
 %end Opis algorytmów
 %Cel
@@ -96,9 +203,33 @@ Główną istotą i zarazem zaletą tego algorytmu jest wykonywanie pewnych loso
 %end Cel
 %Funkcje testowe
 	\chapter{Funkcje testowe}
-		\section{x\^2+y\^2}
+		\section{Funkcja kwadratowa dwóch parametrów}
+Funkcja ta ma następującą postać:
+
+\[f(x, y) = x^2 + y^2 \]
+
+Co\si o wykresie:
+<tutaj jakis wykres >
+
+Funkcja ta przyjmuje jedynie warto\si ci dodatnie, zakres dla potrzeb projektu został zawężony do [-10, 10], natomiast minimum globalne posiada w punkcie [0, 0] i wynosi 0. 
+
+
+
 		\section{Funkcja Rastrigina}
+Funkcja Rastrigina jest funkcją ciągłą, skalowalną i multimodalną. Dzięki posiadaniu wielu minimum lokalnych funkcja ta jest często stosowana w testowaniu algorytmów optymalizacyjnych. 
+
+\[f(x) = An + \sum_{i=1}^{n} [x_i^2 - A \cos{(2 \pi x_i)}] \]
+
+gdzie: \\
+A = ilo\si ć wymiarów \\ \newLine
+Parametry funkcji możemy znaleźć w zakresie [-5.12; 5.12], minimum globalne natomiast w punkcie [0,...,0] i wynosi 0.
+
 		\section{Funkcja Rosenbrocka}
+Rosenbrock's valley function is known as the second function of De Jong. This test function is continuous, scalable, naturally nonseparable, nonconvex, and unimodal.
+
+
+\[f(x) = \sum_{i=1}^{n-1} [100(x_{i+1} - x_i^2)^2 + (1- x_i)^2 ]\]
+
 %end Funkcje testowe
 %Dobór parametrów
 	\chapter{Dobór parametrów}
@@ -114,14 +245,25 @@ Główną istotą i zarazem zaletą tego algorytmu jest wykonywanie pewnych loso
 %end Dostoswanie algorytmów do funkcji testowej zadań odwrotnych
 %Narzędzia i technologie
 	\chapter{Narzędzia i technologie}
+Aby zapewnić bezpieczeństwo oraz możliwo\si ć pracy w kilku miejscach nad jednym problemem, zastosowałem kilka rozwiązań.
 		\section{Użyte narzędzia}
+\subsection{System kontroli wersji}
+Git
+\subsection{Podział pracy na mniejsze zadania}
+Git
 
 		\section{Użyte technologie}
+.NET Framework
 %end Narzędzia i technologie
 %Podsumowanie
 	\chapter{Podsumowanie}
-%end %Podsumowanie
+%end Podsumowanie
 		\section{Dalsze kierunki rozwoju}
 	Foobar
 
+%end Dalsze kierunki rozwoju
+%Źródła
+		\section{Źródła}
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4538776/
+%end Źródła
 \end{document}
